    - Auto-raised menus have been disabled by default; use
      `Ddd*autoRaiseMenu: true' in `~/.ddd/init' to re-enable them.

    Bug fixes:
    - DDD now works with Linux libc 5.4.38 and later.
    - The `gcore' method for getting core files now works.
    - When running in the background, DDD is no longer interrupted by
      `tty output' signals upon initializing the execution window.
    - Improved way of creating decorated command tool.

    And again, a couple of minor improvements and bug fixes.  See the
    ChangeLog for details.



DDD 2.2
-------

    DDD 2.2 brings persistent sessions, an improved user interface,
    attaching to running processes, display shortcuts, and more.

    User-visible changes to DDD 2.1:
    - Persistent sessions.
      * You can now save the entire debugger and process state and
        resume the session later.
      * Saved state includes process memory and state, inferior
        debugger settings, breakpoints, and data displays.
      * X11R6 sessions are supported, too.  When used with a
        session manager, DDD saves and restores its entire state.
      * Persistent sessions work best with GDB; DBX and XDB are
        partially supported, too.
    - Improved user interface.
      * DDD now requires less width and height.
      * Source line numbers have been turned off (can be restored);
        the breakpoint area extends to the first non-blank character.
      * The `Disable ()' button for disabling displays has gone;
        displays are now enabled or disabled via `Show ()/Hide ()'.
      * The `Break at ()' and `Clear at ()' buttons have been merged
        into one single dynamic button.
      * The `Windows' menu is now called `View', complying with the
        Motif style guide.
      * Options are now grouped according to their functionality.  The
        `Options' menu has gone.  Use `Edit' instead.
      * The `Edit' menu has been completely rewritten, allowing for